# process-pilot

./: .readthedocs.yaml  README.md  poetry.toml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
docs/: api.rst  conf.py  index.rst
process_pilot/: graph.py  pilot.py  plugin.py  process.py  types.py
process_pilot/plugins/: file_ready.py  pipe_ready.py  tcp_ready.py
tests/: __init__.py  test_process.py
tests/examples/: services.json  services.yaml
tests/integration/: example.json  file_service.py  pipe_service.py  tcp_service.py  test_run.py
tests/manual/: manual_test.py  pyinstaller.py  services.yaml
tests/manual/linux/: build.sh
tests/manual/windows/: build.ps1
tests/unit/: test_graph.py  test_plugins.py  test_process.py
